# NAUTILUS

./: .gitattributes  .gitignore  .gitleaksignore  .gitmodules  README.md  SOVRN-PRINCIPLES.md  SOVRN.md  auto-start-sovereignty.ps1  configure-startup.ps1  index.html  meta.json  n8n-ingest-workflow.json  Стек Agentic AI v3.3 — Суверенная архитектура Solo Vibe Coder.md  Стек SOVERN v3.3 — Суверенная архитектура Solo Vibe Coder.md
config/: litellm-config.yaml  orchestrator.json  shadow_ingest_state.json  usage_logger.py
core/enerv/tools/: .coverage  README.md  integration_test.sh  pyproject.toml
core/enerv/tools/core/: logging.py  meta.py
core/enerv/tools/schemas/: knowledge.schema.json  tech.schema.json
core/enerv/tools/templates/: scope.json.example
core/enerv/tools/tests/: test_audit.py  test_cli.py  test_config.py  test_file_ops.py  test_index.py  test_index_cmd.py  test_init.py  test_journal.py  test_meta.py  test_migrate.py  test_new.py  test_schemas.py  test_validate.py
core/enerv/tools/tests/commands/: test_auto_index.py  test_current_info_integration.md
core/enerv/tools/tests/tools/: test_current_info.py
core/enerv/tools/tools/: __main__.py  cli.py  mcp_server.py
core/enerv/tools/tools/commands/: audit.py  auto_index.py  current_info.py  export_graph.py  graphrag.py  index.py  ingest.py  init.py  migrate.py  migrate_folder.py  new.py  search.py  validate.py  visualize.py
docker/: .env.example  docker-compose.yml
docs/: DesOps-Diagram.html  LYT-ACE-Alignment-Report.md  SecOps-Diagram.html  ai-lab-budget.md  architecture_v3.3.html  (+8 more)
(+247 files in other folders)
