[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facet-indexing"
version = "0.1.0"
description = "Faceted indexing system for tech and knowledge roots"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.scripts]
facet = "tools.cli:main"
facet-mcp = "tools.mcp_server:main"

[tool.setuptools]
packages = ["tools", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
